--- a/cb/p_ui/index_form_design.html
+++ b/cb/p_ui/index_form_design.html
@@ -7,9 +7,7 @@
 </head>
 
 <body ng-app="BlankApp" ng-cloak>
-	<!--
-    Your HTML content here
-  -->
+
 
 	<!-- Angular Material requires Angular.js Libraries -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
@@ -18,11 +16,86 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
 	<style>
 		body {
-			background-color: darkgrey;
+			background-color: #fff;
 		}
-		/* for new UI box*/
-		/* end new UI box*/
-		/* end of table */
+
+		.v_tabs {
+			position: relative;
+			width: 488px;
+		}
+
+		.tabs-menu {
+			height: 30px;
+			float: left;
+			clear: both;
+			list-style: none;
+			position: absolute;
+			margin: 0;
+			padding: 0;
+			-webkit-transform-origin: 0 0;
+			-moz-transform-origin: 0 0;
+			-o-transform-origin: 0 0;
+			transform-origin: 0 0;
+			-webkit-transform: rotate(-90deg) translate(-488px, 0px);
+			-moz-transform: rotate(-90deg) translate(-488px, 0px);
+			-o-transform: rotate(-90deg) translate(-488px, 0px);
+			transform: rotate(-90deg) translate(-488px, 0px);
+			filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+			left: 0;
+			right: 0;
+			top: auto;
+		}
+
+		.tabs-menu li {
+			height: 30px;
+			line-height: 30px;
+			background-color: rgb(244, 245, 248);
+			border-top: 1px solid rgb(244, 245, 248);
+			border-right: 1px solid rgb(244, 245, 248);
+			border-left: 1px solid rgb(244, 245, 248);
+			float: right;
+			width: auto;
+			border: 1px solid rgb(244, 245, 248);
+		}
+
+		.tabs-menu li.current {
+			position: relative;
+			background-color: #fff;
+			border-bottom: 1px solid #fff;
+			z-index: 5;
+		}
+
+		.tabs-menu li a {
+			padding: 10px;
+			color: #fff;
+			text-decoration: none;
+			font-family: sans-serif;
+			color: rgb(116, 123, 142);
+		}
+		
+
+		.tabs-menu .current a {
+			color: rgb(116, 123, 142);
+		}
+
+		.tab {
+			border: 1px solid rgb(245, 245, 245);
+			background-color: #fff;
+			float: left;
+			margin-bottom: 20px;
+			width: 98%;
+			margin-left: 31px;
+			height: 90%;
+		}
+
+		.tab-content {
+			width: 80%;
+			padding: 20px;
+			display: none;
+		}
+		#tab-1 {
+			display: block;
+		}
 	</style>
 	<!-- Angular Material Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
@@ -33,58 +106,71 @@
      * You must include the dependency on 'ngMaterial' 
      */
 		angular.module('BlankApp', ['ngMaterial']);
+		$(document).ready(function () {
+			$(".tabs-menu a").click(function (event) {
+				event.preventDefault();
+				$(this).parent().addClass("current");
+				$(this).parent().siblings().removeClass("current");
+				var tab = $(this).attr("href");
+				$(".tab-content").not(tab).css("display", "none");
+				$(tab).fadeIn();
+			});
+		});
 	</script>
 
-	<md-content layout-padding style="background-color:#f2f2f2;">
-		<div layout="row" layout-fill>
-			<div flex="100">
-				<div ng-cloak>
-					<md-content>
-						<md-tabs md-dynamic-height md-border-bottom>
-							<md-tab label="one">
-								<md-content class="md-padding">
-									<h1 class="md-display-2">Tab One</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac
-										dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin
-										consectetur felis nec, feugiat ultricies mi.</p>
-								</md-content>
-							</md-tab>
-							<md-tab label="two">
-								<md-content class="md-padding">
-									<h1 class="md-display-2">Tab Two</h1>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac
-										dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin
-										consectetur felis nec, feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor,
-										orci enim rutrum enim, vel tempor sapien arcu a tellus. Vivamus convallis sodales ante varius gravida. Curabitur
-										a purus vel augue ultrices ultricies id a nisl. Nullam malesuada consequat diam, a facilisis tortor volutpat et.
-										Sed urna dolor, aliquet vitae posuere vulputate, euismod ac lorem. Sed felis risus, pulvinar at interdum quis,
-										vehicula sed odio. Phasellus in enim venenatis, iaculis tortor eu, bibendum ante. Donec ac tellus dictum neque
-										volutpat blandit. Praesent efficitur faucibus risus, ac auctor purus porttitor vitae. Phasellus ornare dui nec
-										orci posuere, nec luctus mauris semper.</p>
-									<p>Morbi viverra, ante vel aliquet tincidunt, leo dolor pharetra quam, at semper massa orci nec magna. Donec posuere
-										nec sapien sed laoreet. Etiam cursus nunc in condimentum facilisis. Etiam in tempor tortor. Vivamus faucibus egestas
-										enim, at convallis diam pulvinar vel. Cras ac orci eget nisi maximus cursus. Nunc urna libero, viverra sit amet
-										nisl at, hendrerit tempor turpis. Maecenas facilisis convallis mi vel tempor. Nullam vitae nunc leo. Cras sed nisl
-										consectetur, rhoncus sapien sit amet, tempus sapien.</p>
-									<p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi
-										eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc.
-										Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo
-										lectus.</p>
-								</md-content>
-							</md-tab>
-							<md-tab label="three">
-								<md-content class="md-padding">
-									<h1 class="md-display-2">Tab Three</h1>
-									<p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi
-										eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc.
-										Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo
-										lectus.</p>
-								</md-content>
-							</md-tab>
-						</md-tabs>
-					</md-content>
+	<md-content layout-padding style="background-color:#fff;">
+		<div layout="row" layout-align="start start" layout-fill>
+			<div id="tabs-container">
+				<div class="v_tabs">
+					<ul class="tabs-menu vtab">
+						<li class="current"><a href="#tab-1">hello world</a></li>
+						<li><a href="#tab-2">Tab 2</a></li>
+						<li><a href="#tab-3">Tab 3</a></li>
+						<li><a href="#tab-4">Tab 4</a></li>
+					</ul>
+				</div>
+				<div class="tab">
+					<div id="tab-1" class="tab-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet purus urna. Proin dictum fringilla enim,
+							sit amet suscipit dolor dictum in. Maecenas porttitor, est et malesuada congue, ligula elit fermentum massa, sit amet
+							porta odio est at velit. Sed nec turpis neque. Fusce at mi felis, sed interdum tortor. Nullam pretium, est at congue
+							mattis, nibh eros pharetra lectus, nec posuere libero dui consectetur arcu. Quisque convallis facilisis fermentum.
+							Nam tincidunt, diam nec dictum mattis, nunc dolor ultrices ipsum, in mattis justo turpis nec ligula. Curabitur a ante
+							mauris. Integer placerat imperdiet diam, facilisis pretium elit mollis pretium. Sed lobortis, eros non egestas suscipit,
+							dui dui euismod enim, ac ultricies arcu risus at tellus. Donec imperdiet congue ligula, quis vulputate mauris ultrices
+							non. Aliquam rhoncus, arcu a bibendum congue, augue risus tincidunt massa, vel vehicula diam dolor eget felis.</p>
+					</div>
+					<div id="tab-2" class="tab-content">
+						<p>Donec semper dictum sem, quis pretium sem malesuada non. Proin venenatis orci vel nisl porta sollicitudin. Pellentesque
+							sit amet massa et orci malesuada facilisis vel vel lectus. Etiam tristique volutpat auctor. Morbi nec massa eget sem
+							ultricies fermentum id ut ligula. Praesent aliquet adipiscing dictum. Suspendisse dignissim dui tortor. Integer faucibus
+							interdum justo, mattis commodo elit tempor id. Quisque ut orci orci, sit amet mattis nulla. Suspendisse quam diam,
+							feugiat at ullamcorper eget, sagittis sed eros. Proin tortor tellus, pulvinar at imperdiet in, egestas sed nisl. Aenean
+							tempor neque ut felis dignissim ac congue felis viverra. </p>
+
+					</div>
+					<div id="tab-3" class="tab-content">
+						<p>Duis egestas fermentum ipsum et commodo. Proin bibendum consectetur elit, hendrerit porta mi dictum eu. Vestibulum
+							adipiscing euismod laoreet. Vivamus lobortis tortor a odio consectetur pulvinar. Proin blandit ornare eros dictum
+							fermentum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur laoreet,
+							ante aliquet molestie laoreet, lectus odio fringilla purus, id porttitor erat velit vitae mi. Nullam posuere nunc
+							ut justo sollicitudin interdum. Donec suscipit eros nec leo condimentum fermentum. Nunc quis libero massa. Integer
+							tempus laoreet lectus id interdum. Integer facilisis egestas dui at convallis. Praesent elementum nisl et erat iaculis
+							a blandit ligula mollis. Vestibulum vitae risus dui, nec sagittis arcu. Nullam tortor enim, placerat quis eleifend
+							in, viverra ac lacus. Ut aliquam sapien ut metus hendrerit auctor dapibus justo porta. </p>
+					</div>
+					<div id="tab-4" class="tab-content">
+						<p>Proin sollicitudin tincidunt quam, in egestas dui tincidunt non. Maecenas tempus condimentum mi, sed convallis tortor
+							iaculis eu. Cras dui dui, tempor quis tempor vitae, ullamcorper in justo. Integer et lorem diam. Quisque consequat
+							lectus eget urna molestie pharetra. Cras risus lectus, lobortis sit amet imperdiet sit amet, eleifend a erat. Suspendisse
+							vel luctus lectus. Sed ac arcu nisi, sit amet ornare tellus. Pellentesque nec augue a nibh pharetra scelerisque quis
+							sit amet felis. Nullam at enim at lacus pretium iaculis sit amet vel nunc. Praesent sapien felis, tincidunt vitae
+							blandit ut, mattis at diam. Suspendisse ac sapien eget eros venenatis tempor quis id odio. Donec lacus leo, tincidunt
+							eget molestie at, pharetra cursus odio. </p>
+					</div>
 				</div>
 			</div>
+		</div>
 
 	</md-content>
 
